@@ -1,7 +1,4 @@
 import unittest
-import sys
-import os
-sys.path.insert(0, os.path.join(os.path.dirname(__file__), '../..'))
 
 from resources.lib.udacity import Udacity
 from resources.lib.utils import widgets_to_answer
